...
            "state": "translated",
            "value": "English"
          }
        }
      }
    },
    "Pro 会员": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pro Membership"
...
            "state": "translated",
            "value": "关于心绪日记"
          }
        }
      }
    },
    "关闭": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "关闭"
...
            "state": "translated",
            "value": "年度心情热力图"
          }
        }
      }
    },
    "彻底删除": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Permanently"
...
            "state": "translated",
            "value": "彻底删除失败，请稍后重试。"
          }
        }
      }
    },
    "彻底删除？": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Permanently?"
...
            "state": "translated",
            "value": "心情统计"
          }
        }
      }
    },
    "恢复": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Restore"
...
            "state": "translated",
            "value": "放弃编辑？"
          }
        }
      }
    },
    "新建时刻": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Moment"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "新建时刻"
...
            "state": "translated",
            "value": "解锁无限日记、无限照片、无限标签，随时随地记录每一个时刻"
          }
        }
      }
    },
    "设置": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "设置"
          }
        }
      }
    },
    "语言": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Language"
...
